# fodder

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: upload-release-assets.sh
.github/workflows/: pr.yml  release-please.yml  release.yml
crates/fodder-core/: Cargo.toml
crates/fodder-core/src/: db.rs  fetch.rs  ipc.rs  lib.rs  models.rs  parse.rs  paths.rs  schedule.rs  settings.rs
crates/fodder-core/tests/: fetch.rs
crates/fodder-daemon/: Cargo.toml
crates/fodder-daemon/src/: dbus.rs  main.rs  notify.rs  poll.rs  tray.rs  util.rs
crates/fodder-daemon/tests/: daemon.rs
crates/fodder-gtk/: Cargo.toml
crates/fodder-gtk/examples/: webkit_teardown.rs
crates/fodder-gtk/src/: article_view.rs  daemon_client.rs  discover.rs  main.rs  settings_dialog.rs  window.rs
crates/fodder-gtk/src/render/: ir.rs  mod.rs  textview.rs
packaging/: fodder.desktop
packaging/arch/: PKGBUILD
