[workspace]
resolver = "2"
members = ["crates/fodder-core", "crates/fodder-daemon", "crates/fodder-gtk"]

[workspace.package]
version = "0.1.0" # x-release-please-version
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/dipakmdhrm/fodder"
authors = ["Dipak Yadav <dipakmdhrm@gmail.com>"]

[workspace.dependencies]
fodder-core = { path = "crates/fodder-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
feed-rs = "2"
ureq = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
tempfile = "3"
tiny_http = "0.12"

[profile.release]
lto = "thin"
strip = true
