[package]
name = "fodder-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GTK4/libadwaita viewer for the Fodder feed reader"

[[bin]]
name = "fodder"
path = "src/main.rs"

[dependencies]
fodder-core.workspace = true
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
webkit6 = "0.4"
async-channel = "2"
ammonia = "4"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
chrono.workspace = true
log.workspace = true
env_logger = "0.11"
