[package]
name = "fodder-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GTK4/libadwaita viewer for the Fodder feed reader"

[[bin]]
name = "fodder"
path = "src/main.rs"

# Packages ship BOTH binaries; build the whole workspace in release first
# (cargo build --release --workspace), then `cargo deb -p fodder-gtk --no-build`
# or `cargo generate-rpm -p crates/fodder-gtk`.
[package.metadata.deb]
name = "fodder"
maintainer = "Dipak Yadav <dipakmdhrm@gmail.com>"
copyright = "2026 Dipak Yadav"
license-file = ["../../LICENSE", "0"]
section = "net"
priority = "optional"
depends = "$auto"
extended-description = """
A resource-frugal RSS/Atom feed reader for Linux built with GTK4 and
libadwaita. A separate lightweight daemon polls feeds in the background,
so the UI consumes no resources while closed."""
assets = [
    ["target/release/fodder", "usr/bin/", "755"],
    ["target/release/fodder-daemon", "usr/bin/", "755"],
    ["../../packaging/fodder.desktop", "usr/share/applications/io.github.dipakmdhrm.Fodder.desktop", "644"],
    ["../../packaging/icons/io.github.dipakmdhrm.Fodder.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["../../README.md", "usr/share/doc/fodder/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "fodder"
summary = "Resource-frugal GTK4 RSS/Atom feed reader"
assets = [
    { source = "target/release/fodder", dest = "/usr/bin/fodder", mode = "755" },
    { source = "target/release/fodder-daemon", dest = "/usr/bin/fodder-daemon", mode = "755" },
    { source = "packaging/fodder.desktop", dest = "/usr/share/applications/io.github.dipakmdhrm.Fodder.desktop", mode = "644" },
    { source = "packaging/icons/io.github.dipakmdhrm.Fodder.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.dipakmdhrm.Fodder.svg", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = "*"
libadwaita = "*"
"webkitgtk6.0" = "*"
dbus-libs = "*"

[dependencies]
fodder-core.workspace = true
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
webkit6 = "0.4"
async-channel = "2"
ammonia = "4"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
chrono.workspace = true
log.workspace = true
env_logger = "0.11"
